# shallow_reserach

./: .gitignore  README.md  pyproject.toml  requirements.txt  shallow_research.py
