[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shallow-research"
version = "0.1.0"
description = "ウェブサイトの構造化されたリサーチを自動化するツール"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "fuchigta", email = "noreply@example.com" }
]
keywords = ["ai", "web-scraping", "research", "langchain", "mcp", "sitemap"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "playwright>=1.52.0",
    "langchain>=0.3.25",
    "langchain-core>=0.3.64",
    "langchain-google-genai>=2.1.5",
    "langchain-openai>=0.3.21",
    "langchain-anthropic>=0.3.15",
    "langchain-mcp-adapters>=0.1.7",
    "langgraph>=0.2.80",
    "pydantic>=2.11.5",
    "rich>=14.0.0",
    "python-dotenv>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "black>=24.0.0",
    "ruff>=0.9.0",
    "mypy>=1.13.0",
]

[project.scripts]
shallow-research = "shallow_research:main"

[project.urls]
Homepage = "https://github.com/fuchigta/shallow_reserach"
Repository = "https://github.com/fuchigta/shallow_reserach"
Issues = "https://github.com/fuchigta/shallow_reserach/issues"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "black>=24.0.0",
    "ruff>=0.9.0",
    "mypy>=1.13.0",
]

[tool.ruff]
target-version = "py310"
line-length = 120
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
target-version = ['py310']
line-length = 120
skip-string-normalization = true

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"